# CMakeTemplate

./: .clang-format  CMakeLists.txt  README.md
software/applications/: CMakeLists.txt
software/applications/sample_application/: CMakeLists.txt
software/applications/sample_application/src/sample_application/: main.cpp
software/components/: CMakeLists.txt
software/components/sample_component/: CMakeLists.txt
software/components/sample_component/src/: CMakeLists.txt
software/components/sample_component/src/sample_component/: sample_component.cpp  sample_component.hpp
software/components/sample_component/test/: CMakeLists.txt
software/components/sample_component/test/test_sample_component/: test_sample_component.cpp
